# payrix-rs

./: .gitignore  API_INCONSISTENCIES.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/payrix/: Cargo.toml
crates/payrix-macros/: Cargo.toml
crates/payrix-macros/src/: lib.rs
crates/payrix/src/: entity.rs
crates/payrix/src/cache/: schema.rs
crates/payrix/src/types/: account_verification.rs  entity_reserve.rs  expanded.rs  fee.rs  login.rs  org_entity.rs  plan.rs  terminal.rs  token.rs
crates/payrix/src/webhooks/: mod.rs
crates/payrix/src/workflows/: mod.rs  subscription_management.rs
crates/payrix/tests/: collect_mock_data.rs  customers.rs  expansion_discovery.rs  onboarding.rs  plans.rs  search.rs  subscription_management.rs  tokens.rs
crates/payrix/tests/common/: mod.rs
crates/payrix/tests/mock_data/: batches.json  chargebackMessageResults.json  chargebacks.json  entities.json  transactions_expanded.json
examples/: webhook_dispute_handler.rs
payrix/: Cargo.toml
payrix-macros/: Cargo.toml
payrix/examples/: webhook_dispute_handler.rs
payrix/src/: client.rs
payrix/src/cache/: mod.rs
payrix/src/types/: adjustment.rs  common.rs  disbursement.rs  merchant.rs  payment.rs  payout.rs  refund.rs  reserve_entry.rs
payrix/src/workflows/: dispute_handling.rs  merchant_onboarding.rs  webhook_setup.rs
payrix/tests/: dispute_workflow.rs  entities.rs
payrix/tests/common/: fixtures.rs
payrix/tests/mock_data/: chargebackDocuments.json  chargebackMessages.json  customers_expanded.json  transactions.json
plans/: chargeback-dispute-workflow.md
src/: client.rs  entity.rs  error.rs  lib.rs  rate_limiter.rs  search.rs
src/cache/: entity_cache.rs  mod.rs  sync.rs
src/types/: account.rs  account_verification.rs  adjustment.rs  alert.rs  batch.rs  chargeback.rs  common.rs  contact.rs  customer.rs  disbursement.rs  disbursement_entry.rs  division.rs  entity.rs  entity_reserve.rs  entry.rs  expanded.rs  fee.rs  fee_rule.rs  fund.rs  hold.rs  login.rs  member.rs  merchant.rs  mod.rs  note.rs  org.rs  org_entity.rs  partition.rs  payout.rs  plan.rs  refund.rs  reserve.rs  reserve_entry.rs  settlement.rs  statement.rs  subscription.rs  team_login.rs  token.rs  transaction.rs  vendor.rs
src/webhooks/: events.rs  logging.rs  mod.rs  server.rs
src/workflows/: dispute_handling.rs  merchant_onboarding.rs  mod.rs
tests/: accounts.rs  alerts_notes.rs  batches.rs  chargebacks.rs  customers.rs  entities.rs  error_handling.rs  expansion_discovery.rs  funding.rs  integration.rs  merchants.rs  mock_api.rs  offline_deserialization.rs  onboarding.rs  organizations.rs  plans.rs  search.rs  tokens.rs  transactions.rs
tests/common/: mod.rs
tests/mock_data/: chargebackStatuses.json  customers.json  members.json  merchants.json
