[workspace]
resolver = "2"
members = ["payrix", "payrix-macros"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/outlawpractice/payrix-rs"

[workspace.dependencies]
# Shared dependencies
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ipnet = "2.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "time", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
wiremock = "0.6"

# Proc-macro dependencies
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Internal crates
payrix-macros = { version = "0.1", path = "payrix-macros" }
