[package]
name = "payrix-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for the Payrix SDK"

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
